Fix mobile spacing

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -19,29 +19,7 @@ variant-list .quantity__button {
   padding-bottom: 4rem;
 }
 
-.variantlist-total {
-  display: flex;
-  padding-top: 2rem;
-  border-top: 0.1rem solid rgba(var(--color-foreground), .08);
-}
-
-.totals__product-total {
-  text-align: center;
-}
-
 @media screen and (min-width: 750px) {
-  .variantlist-total {
-    position: sticky;
-    justify-content: space-between;
-    bottom: 0;
-    z-index: 1;
-    background-color: rgb(var(--color-background));
-  }
-
-  .totals__product-total {
-    text-align: right;
-  }
-
   .variant__items {
     max-height: 90rem;
     overflow-y: auto;
@@ -401,8 +379,6 @@ variant-list-remove-button .icon-remove {
 
 .variant-list__total-items {
   display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .variant-list__total-items h3,
@@ -414,4 +390,55 @@ variant-list-remove-button .icon-remove {
 .variant-list__total-items p,
 .totals__subtotal {
   margin-top: 0.5rem;
+}
+
+.variantlist-total {
+  display: flex;
+  padding-top: 2rem;
+  border-top: 0.1rem solid rgba(var(--color-foreground), .08);
+}
+
+.totals__product-total {
+  text-align: center;
+}
+
+@media screen and (min-width: 750px) {
+  .variantlist-total {
+    position: sticky;
+    justify-content: space-between;
+    bottom: 0;
+    z-index: 1;
+    background-color: rgb(var(--color-background));
+  }
+
+  .totals__product-total {
+    text-align: right;
+  }
+
+  .variant-list__total-items {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .totals__product-total {
+    display: flex;
+    justify-content: center;
+  }
+
+  .totals__subtotal-value,
+  .variant-list__total-items h3 {
+    margin-right: 1.2rem;
+  }
+
+  .variant-list__total-items {
+    margin-top: 1rem;
+    margin-bottom: 1.3rem;
+  }
+}
+
+variant-list .tax-note {
+  margin-bottom: 2rem;
+  display: block;
 }
